initalize st7701 with some very dirty method. changed bootlogo,patched ddr freq

--- a/.config
+++ b/.config
@@ -195,7 +195,7 @@ CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0xF0000
 CONFIG_ENV_SECT_SIZE=0x10000
 CONFIG_DM_GPIO=y
-CONFIG_DEFAULT_DEVICE_TREE="allwinner/suniv-f1c100s-liulianpi"
+CONFIG_DEFAULT_DEVICE_TREE="allwinner/suniv-f1c100s-epass"
 CONFIG_OF_LIBFDT_OVERLAY=y
 CONFIG_MULTI_DTB_FIT_UNCOMPRESS_SZ=0x8000
 CONFIG_DM_RESET=y
@@ -249,10 +249,10 @@ CONFIG_MACH_SUNIV=y
 # CONFIG_MACH_SUN50I_H616 is not set
 # CONFIG_MACH_SUN50I_A133 is not set
 # CONFIG_RESERVE_ALLWINNER_BOOT0_HEADER is not set
-CONFIG_DRAM_CLK=156
+CONFIG_DRAM_CLK=204
 CONFIG_DRAM_ZQ=0
 # CONFIG_DRAM_ODT_EN is not set
-CONFIG_SYS_CLK_FREQ=408000000
+CONFIG_SYS_CLK_FREQ=604000000
 CONFIG_SUNXI_MINIMUM_DRAM_MB=32
 # CONFIG_UART0_PORT_F is not set
 # CONFIG_OLD_SUNXI_KERNEL_COMPAT is not set
@@ -261,7 +261,7 @@ CONFIG_MMC_SUNXI_SLOT_EXTRA=-1
 # CONFIG_I2C1_ENABLE is not set
 # CONFIG_R_I2C_ENABLE is not set
 CONFIG_VIDEO_SUNXI=y
-CONFIG_VIDEO_LCD_MODE="x:480,y:272,depth:18,pclk_khz:10000,le:42,ri:8,up:11,lo:4,hs:1,vs:1,sync:3,vmode:0"
+CONFIG_VIDEO_LCD_MODE="x:360,y:640,depth:18,pclk_khz:12000,le:78,ri:84,up:10,lo:16,hs:6,vs:4,sync:3,vmode:0"
 CONFIG_VIDEO_LCD_DCLK_PHASE=1
 CONFIG_VIDEO_LCD_POWER=""
 CONFIG_VIDEO_LCD_RESET=""
@@ -428,7 +428,7 @@ CONFIG_DISTRO_DEFAULTS=y
 # Autoboot options
 #
 CONFIG_AUTOBOOT=y
-CONFIG_BOOTDELAY=2
+CONFIG_BOOTDELAY=0
 # CONFIG_AUTOBOOT_KEYED is not set
 # CONFIG_AUTOBOOT_USE_MENUKEY is not set
 # CONFIG_BOOT_RETRY is not set
@@ -449,10 +449,10 @@ CONFIG_OF_BOARD_SETUP=y
 # CONFIG_FDT_SIMPLEFB is not set
 CONFIG_ARCH_FIXUP_FDT_MEMORY=y
 CONFIG_USE_BOOTARGS=y
-CONFIG_BOOTARGS="console=ttyS0,115200 panic=5 rootwait mtdparts=spi0.0:1M(uboot)ro,64k(dtb)ro,4M(kernel)ro,-(rootfs) root=/dev/mtdblock3 earlyprintk rw rootfstype=jffs2"
+CONFIG_BOOTARGS="console=ttyS0,115200 console=tty0 panic=5 rootwait mtdparts=spi0.0:1M(u-boot)ro,128K(dtb)ro,5124K(kernel)ro,-(rootfs) root=ubi0:rootfs earlyprintk rw rootfstype=ubifs ubi.mtd=3 fbcon=rotate:2"
 # CONFIG_BOOTARGS_SUBST is not set
 CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="mtd read spi-nand0 0x80C00000 0x100000 0x4000; mtd read spi-nand0 0x80008000 0x120000 0x400000; bootz 0x80008000 - 0x80C00000"
+CONFIG_BOOTCOMMAND="setenv verify n;mtd read spi-nand0 0x80C00000 0x100000 0x4000; mtd read spi-nand0 0x80008000 0x120000 0x500000; bootz 0x80008000 - 0x80C00000"
 CONFIG_USE_PREBOOT=y
 CONFIG_PREBOOT=""
 CONFIG_DEFAULT_FDT_FILE=""
@@ -947,7 +947,7 @@ CONFIG_OF_SEPARATE=y
 # CONFIG_OF_BOARD is not set
 # CONFIG_OF_OMIT_DTB is not set
 CONFIG_DEVICE_TREE_INCLUDES=""
-CONFIG_OF_LIST="allwinner/suniv-f1c100s-liulianpi"
+CONFIG_OF_LIST="allwinner/suniv-f1c100s-epass"
 CONFIG_OF_OVERLAY_LIST=""
 # CONFIG_MULTI_DTB_FIT is not set
 CONFIG_OF_TAG_MIGRATE=y
